--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,5 @@
 AllCops:
-  RunRailsCops: true
+  TargetRubyVersion: 2.3
   Include:
     - '**/Rakefile'
     - '**/config.ru'
@@ -10,6 +10,9 @@ AllCops:
     - 'script/**/*'
     - 'vendor/**/*'
     - !ruby/regexp /old_and_unused\.rb$/
+
+Rails:
+  Enabled: true
 
 Documentation:
   Enabled: false
